--- a/views/items.ejs
+++ b/views/items.ejs
@@ -114,6 +114,8 @@
     </div>
 </header>
 
+<main class="container">
+  <img src="../public/img/상품배경.jpg" alt="너굴맨" class="col-12">
     <div class="logo-bar con">
         <div class="menu-bar">
             <div class="menu-box">
@@ -215,11 +217,11 @@
             </div>
         </div>
     </div>
-    <div class="bn-box con">
+    <!-- <div class="bn-box con">
         <div class="img-box">
             <img src="../img/pexels-karolina-grabowska-4465124.jpg" alt="너굴맨" height="460px" width="978px">
         </div>
-    </div>
+    </div> -->
 
     <div class="list con">
         <div>
@@ -240,32 +242,58 @@
         </ul>
       
     </div>
+
+</main>
+
+
+
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
+  <p class="col-md-4 mb-0 text-muted">© 2022 Company, Inc</p>
+
+  <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+  </a>
+
+  <ul class="nav col-md-4 justify-content-end">
+  <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+  <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+  <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+  <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+  <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+  </ul>
+</footer>
+
+
+
+
+
+
     <!-- JavaScript Bundle with Popper -->
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script>
-function InsertData(result1,result2){
-//1. 해당하는 제품의 ID 값을 가져와야함
-//console.log(result);
+// function InsertData(result1,result2){
+// //1. 해당하는 제품의 ID 값을 가져와야함
+// //console.log(result);
 
-$.ajax({
-  url:"/wish",
-  data : {
-    "id" : result1,
-    "price" : result2 
-  },
+// $.ajax({
+//   url:"/wish",
+//   data : {
+//     "id" : result1,
+//     "price" : result2 
+//   },
 
-  success:function(){
+//   success:function(){
 
-    alert("성공");
-  },
-  error:function(){
-    alert("실패");
-  }
-})
+//     alert("성공");
+//   },
+//   error:function(){
+//     alert("실패");
+//   }
+// })
 
 
-}
+// }
 
 // function like(i){
 //   //보내야하는 데이터 
