--- a/views/mypage_wishList.ejs
+++ b/views/mypage_wishList.ejs
@@ -138,40 +138,43 @@
     <div class="container col-lg-10 col-md-12 pb-5" style="margin: 0 auto;">
 
       <% for(let i=0 ; i<rows.length/4 ; i++){%>
+
         <div class="row" style="text-align: center;">
-          <% if(rows[4*i] !=null) {%>
-            <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6" style="text-align: center;">
-              <div class="row" style="display: inline-block;">
-              <div style="height: 303px;" width:auto;">
-                <a href="<%=rows[4*i].purchase_link%>">
-                  <div class="img-box"><img src="<%=rows[4*i].img_link%>" alt="" class="img-thumbnail img-fluid"></div>
-                </a>
-                <a href="<%=rows[4*i].purchase_link%>" style="text-decoration:none; font-weight: bold;">
-                  <div class="product-name my-2">
-                    <%=rows[4*i].item_name%>
-                  </div>
-                </a>
+
+           <% if(rows[4*i] !=null) {%>
+              <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6" style="text-align: center;">
+                <div class="row" style="display: inline-block;">
+                <div style="height: 303px;" width:auto;">
+                  <a href="<%=rows[4*i].purchase_link%>">
+                    <div class="img-box"><img src="<%=rows[4*i].img_link%>" alt="" class="img-thumbnail img-fluid" style="display: inline-block;"></div>
+                  </a>
+                  <a href="<%=rows[4*i].purchase_link%>" style="text-decoration:none; font-weight: bold;">
+                    <div class="product-name my-2">
+                      <%=rows[4*i].item_name%>
+                    </div>
+                  </a>
+                </div>
+                <div class="product-price mb-2" style="margin: 0 auto;">
+                  <%=rows[4*i].strike_price%>원
+                </div>
+                </div>
+                <form action="http://127.0.0.1:3000/wish_delete" method="post">
+                  <input type="hidden" name="item_name" value="<%=rows[4*i].item_name%>">
+                  <input type="hidden" name="user_id" value="<%=user.id%>">
+                  <input type="submit" value="❌선택취소❌" class="btn btn-outline-danger">
+                </form>
               </div>
-              <div class="product-price mb-2" style="margin: 0 auto;">
-                <%=rows[4*i].strike_price%>원
-              </div>
-              </div>
-              <form action="http://127.0.0.1:3000/wish_delete" method="post">
-                <input type="hidden" name="item_name" value="<%=rows[4*i].item_name%>">
-                <input type="hidden" name="user_id" value="<%=user.id%>">
-                <input type="submit" value="❌선택취소❌" class="btn btn-outline-danger">
-              </form>
-            </div>
-            <%}%>
+              <%}%>
+
 
             <% if(rows[4*i+1] !=null) {%>
               <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6" style="text-align: center;">
                 <div class="row" style="display: inline-block;">
                 <div style="height: 303px;" width:auto;">
                   <a href="<%=rows[4*i+1].purchase_link%>">
-                    <div class="img-box"><img src="<%=rows[4*i+1].img_link%>" alt="" class="img-thumbnail img-fluid"></div>
+                    <div class="img-box"><img src="<%=rows[4*i+1].img_link%>" alt="" class="img-thumbnail img-fluid style="display: inline-block""></div>
                   </a>
-                  <a href="<%=rows[4*i+1].purchase_link%>" style="text-decoration:none; font-weight: bold;">
+                  <a href="<%=rows[4*i+1].purchase_link%>" style="text-decoration:none; font-weight: bold; width:fit-content;"">
                     <div class="product-name my-2">
                       <%=rows[4*i+1].item_name%>
                     </div>
@@ -194,9 +197,9 @@
                   <div class="row" style="display: inline-block;">
                   <div style="height: 303px;" width:auto;">
                     <a href="<%=rows[4*i+2].purchase_link%>">
-                      <div class="img-box"><img src="<%=rows[4*i+2].img_link%>" alt="" class="img-thumbnail img-fluid"></div>
+                      <div class="img-box"><img src="<%=rows[4*i+2].img_link%>" alt="" class="img-thumbnail img-fluid style="display: inline-block""></div>
                     </a>
-                    <a href="<%=rows[4*i+2].purchase_link%>" style="text-decoration:none; font-weight: bold;">
+                    <a href="<%=rows[4*i+2].purchase_link%>" style="text-decoration:none; font-weight: bold; width:fit-content;"">
                       <div class="product-name my-2">
                         <%=rows[4*i+2].item_name%>
                       </div>
@@ -213,13 +216,12 @@
                   </form>
                 </div>
                 <%}%>
-
                 <% if(rows[4*i+3] !=null) {%>
                   <div class="col-xl-3 col-lg-6 col-sm-6 col-xs-6" style="text-align: center;">
                     <div class="row" style="display: inline-block;">
                     <div style="height: 303px;" width:auto;">
                       <a href="<%=rows[4*i+3].purchase_link%>">
-                        <div class="img-box"><img src="<%=rows[4*i+3].img_link%>" alt="" class="img-thumbnail img-fluid"></div>
+                        <div class="img-box"><img src="<%=rows[4*i+3].img_link%>" alt="" class="img-thumbnail img-fluid"  style="display: inline-block"></div>
                       </a>
                       <a href="<%=rows[4*i+3].purchase_link%>" style="text-decoration:none; font-weight: bold;">
                         <div class="product-name my-2">
