--- a/views/mypage_wishList.ejs
+++ b/views/mypage_wishList.ejs
@@ -156,10 +156,10 @@
                 <%=rows[4*i].strike_price%>원
               </div>
               </div>
-              <form action="http://127.0.0.1:3000/wish_delete" method="post">
+              <form name="testForm<%=4*i%>">
                 <input type="hidden" name="item_name" value="<%=rows[4*i].item_name%>">
                 <input type="hidden" name="user_id" value="<%=user.id%>">
-                <input type="submit" value="❌선택취소❌" class="btn btn-outline-danger">
+                <input type="button" value="❌선택취소❌" class="btn btn-outline-danger" onclick="InsertData(<%=4*i%>)">
               </form>
             </div>
             <%}%>
@@ -181,10 +181,10 @@
                   <%=rows[4*i+1].strike_price%>원
                 </div>
                 </div>
-                <form action="http://127.0.0.1:3000/wish_delete" method="post">
+                <form name="testForm<%=4*i+1%>">
                   <input type="hidden" name="item_name" value="<%=rows[4*i+1].item_name%>">
                   <input type="hidden" name="user_id" value="<%=user.id%>">
-                  <input type="submit" value="❌선택취소❌" class="btn btn-outline-danger">
+                  <input type="button" value="❌선택취소❌" class="btn btn-outline-danger" onclick="InsertData(<%=4*i+1%>)">
                 </form>
               </div>
               <%}%>
@@ -206,10 +206,10 @@
                     <%=rows[4*i+2].strike_price%>원
                   </div>
                   </div>
-                  <form action="http://127.0.0.1:3000/wish_delete" method="post">
+                  <form name="testForm<%=4*i+2%>">
                     <input type="hidden" name="item_name" value="<%=rows[4*i+2].item_name%>">
                     <input type="hidden" name="user_id" value="<%=user.id%>">
-                    <input type="submit" value="❌선택취소❌" class="btn btn-outline-danger">
+                    <input type="button" value="❌선택취소❌" class="btn btn-outline-danger" onclick="InsertData(<%=4*i+2%>)">
                   </form>
                 </div>
                 <%}%>
@@ -231,10 +231,10 @@
                       <%=rows[4*i+3].strike_price%>원
                     </div>
                     </div>
-                    <form action="http://127.0.0.1:3000/wish_delete" method="post">
+                    <form name="testForm<%=4*i+3%>">
                       <input type="hidden" name="item_name" value="<%=rows[4*i+3].item_name%>">
                       <input type="hidden" name="user_id" value="<%=user.id%>">
-                      <input type="submit" value="❌선택취소❌" class="btn btn-outline-danger">
+                      <input type="button" value="❌선택취소❌" class="btn btn-outline-danger" onclick="InsertData(<%=4*i+3%>)">
                     </form>
                   </div>
                   <%}%>
@@ -264,10 +264,35 @@
     </ul>
   </footer>
 
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"></script>
+    <script>
+
+      function InsertData(num) {
+        var queryString = $("form[name=testForm" + num + "]").serialize();
+        console.log(queryString)
+        $.ajax({
+          type: 'post',
+          url: '/wish_delete',
+          data: queryString,
+          dataType: 'json',
+          error: function () {
+            alert("실패");
+          },
+          success: function (data) {
+            if (data.result == "ok") {
+              alert('위시리스트 삭제 완료!');
+              location.reload();
+            } else {
+              alert('위시리스트 삭제 실패..');
+            }
+          }
+        });
+      }
+    </script>
 </body>
 
 </html>
